# config/routes.rb
@@ -4,6 +4,7 @@ Rails.application.routes.draw do
   namespace :v1 do
     resources :user, only:[:index, :create, :update, :destroy]
     resources :employee, only:[:index, :create, :update, :destroy]
+    resources :session, only:[:create]
   end
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
